# VirusSpread

./: CMakeLists.txt  TODO.txt  main.c  utils.c
core/: populationBuilder.c  populationBuilder.h  spaceBuilder.c  spaceBuilder.h
core/builders/: historicBuilder.c  historicBuilder.h  populationBuilder.c  populationBuilder.h  spaceBuilder.c  spaceBuilder.h
core/models/: personVitalModel.c  personVitalModel.h  propagationModel.c  propagationModel.h
core/structures/: structures.h
data/people/: pessoasC.txt
helpers/: feedbackMessages.c  feedbackMessages.h  utils.c  utils.h  validations.c  validations.h
